--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>To-do</title>
+  <link rel="stylesheet" href="css/master.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+  <title>Google Keep Mockup</title>
 </head>
 <body>
+  <div class="root"></div>
+  <script type="text/javascript" src="js/vendor/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="js/components/header.js"></script>
+  <script type="text/javascript" src="js/components/todo.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 
 </body>
 </html>
